<resources>
    <string name="app_name">Todo</string>
    <string name="add">Add</string>
    <string name="prev_day">Previous day</string>
    <string name="next_day">Next day</string>
    <string name="name">Name</string>
    <string name="priority">Priority</string>
    <string name="date">Date</string>
    <string name="deadline">Deadline</string>
    <string name="auto_reschedule">Auto-Reschedule</string>
    <string name="auto_reschedule_hint">This task will be automatically moved to the next day</string>
    <string name="change">change</string>
    <string name="none">None</string>
    <string name="set">Set</string>
    <string name="clear">Clear</string>
    <string name="description">Description</string>
    <string name="day_task_list_fragment_title">My tasks</string>
    <string name="task_fragment_title">Task</string>
    <string name="new_task_fragment_title">New task</string>
    <string name="edit_task_fragment_title">Edit task</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="images">Images</string>
    <string name="select_images">Select images…</string>
    <string name="add_category">Add category</string>
    <string name="categories">Categories</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="done">Done</string>
    <string name="no_category_msg">No available categories</string>
    <string name="all_tasks">All Tasks</string>
    <string name="search">Find task</string>
    <string name="about">About</string>
</resources>
