<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" >
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp"
        tools:context=".AddTaskActivity">
        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <EditText
                        android:id="@+id/name_edit_text"
                        style="@style/Base.Widget.MaterialComponents.TextInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:hint="@string/name"
                        android:inputType="text"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                <TextView
                        android:id="@+id/priority_hint"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:paddingLeft="12dp"
                        android:paddingRight="12dp"
                        android:layout_margin="10dp"
                        android:text="@string/priority"
                        style="@style/TextAppearance.AppCompat.Medium"
                        app:layout_constraintEnd_toStartOf="@id/priority_spinner"
                        app:layout_constraintHorizontal_weight="1"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@id/priority_spinner"
                        app:layout_constraintBottom_toBottomOf="@id/priority_spinner" />

                <Spinner
                        android:id="@+id/priority_spinner"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_weight="2"
                        app:layout_constraintStart_toEndOf="@id/priority_hint"
                        app:layout_constraintTop_toBottomOf="@id/name_edit_text" />

                <TextView
                        android:id="@+id/deadline_text_view"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:paddingLeft="12dp"
                        android:paddingRight="12dp"
                        style="@style/TextAppearance.AppCompat.Medium"
                        app:layout_constraintHorizontal_weight="2"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/set_deadline_button"
                        app:layout_constraintTop_toTopOf="@+id/set_deadline_button"
                        app:layout_constraintBottom_toBottomOf="@+id/set_deadline_button" />

                <Button
                        android:id="@+id/set_deadline_button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        app:layout_constraintHorizontal_weight="1"
                        android:text="@string/set"
                        app:layout_constraintStart_toEndOf="@+id/deadline_text_view"
                        app:layout_constraintEnd_toStartOf="@+id/clear_deadline_button"
                        app:layout_constraintTop_toBottomOf="@+id/priority_spinner"/>

                <Button
                        android:id="@+id/clear_deadline_button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        app:layout_constraintHorizontal_weight="1"
                        android:text="@string/clear"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/priority_spinner"
                        app:layout_constraintStart_toEndOf="@id/set_deadline_button"/>

                <EditText
                        android:id="@+id/description_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:layout_margin="10dp"
                        android:background="@drawable/description_background"
                        android:gravity="top"
                        android:hint="@string/description"
                        android:inputType="textMultiLine"
                        android:padding="12dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/set_deadline_button" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/accept_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/ic_check_black_24dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>