<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp"
            tools:context=".NewTaskActivity">

        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/name_text_input_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_margin="10dp">

                    <EditText
                            android:id="@+id/name_edit_text"
                            style="@style/Base.Widget.MaterialComponents.TextInputEditText"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="@string/name"
                            android:inputType="text"
                            android:importantForAutofill="no"/>

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                        android:id="@+id/priority_hint"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:paddingLeft="12dp"
                        android:paddingRight="12dp"
                        android:layout_margin="10dp"
                        android:text="@string/priority"
                        style="@style/TextAppearance.AppCompat.Medium"
                        app:layout_constraintEnd_toStartOf="@id/priority_spinner"
                        app:layout_constraintHorizontal_weight="1"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@id/priority_spinner"
                        app:layout_constraintBottom_toBottomOf="@id/priority_spinner"/>

                <Spinner
                        android:id="@+id/priority_spinner"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_weight="2"
                        app:layout_constraintStart_toEndOf="@id/priority_hint"
                        app:layout_constraintTop_toBottomOf="@id/name_text_input_layout"/>

                <TextView
                        android:id="@+id/deadline_text_view"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:paddingLeft="12dp"
                        android:paddingRight="12dp"
                        style="@style/TextAppearance.AppCompat.Medium"
                        app:layout_constraintHorizontal_weight="2"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/set_deadline_button"
                        app:layout_constraintTop_toTopOf="@+id/set_deadline_button"
                        app:layout_constraintBottom_toBottomOf="@+id/set_deadline_button"/>

                <Button
                        android:id="@+id/set_deadline_button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        app:layout_constraintHorizontal_weight="1"
                        android:text="@string/set"
                        app:layout_constraintStart_toEndOf="@+id/deadline_text_view"
                        app:layout_constraintEnd_toStartOf="@+id/clear_deadline_button"
                        app:layout_constraintTop_toBottomOf="@+id/priority_spinner"/>

                <Button
                        android:id="@+id/clear_deadline_button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        app:layout_constraintHorizontal_weight="1"
                        android:text="@string/clear"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/priority_spinner"
                        app:layout_constraintStart_toEndOf="@id/set_deadline_button"/>

                <TextView
                        android:id="@+id/auto_reschedule_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:paddingLeft="12dp"
                        android:paddingRight="12dp"
                        style="@style/TextAppearance.AppCompat.Medium"
                        android:text="@string/auto_reschedule"
                        app:layout_constraintTop_toBottomOf="@id/set_deadline_button"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/auto_reschedule_switch"/>

                <Switch
                        android:id="@+id/auto_reschedule_switch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toEndOf="@id/auto_reschedule_text_view"
                        app:layout_constraintTop_toTopOf="@id/auto_reschedule_text_view"/>

                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/description_text_input_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_margin="10dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/auto_reschedule_text_view">

                    <EditText
                            android:id="@+id/description_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="150dp"
                            android:gravity="top"
                            android:hint="@string/description"
                            android:inputType="textMultiLine"
                            android:padding="12dp"
                            android:importantForAutofill="no"/>

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                        android:id="@+id/categories_label_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/categories"
                        android:layout_margin="10dp"
                        android:paddingLeft="12dp"
                        android:paddingRight="12dp"
                        style="@style/TextAppearance.AppCompat.Medium"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/categories_content_text_view"
                        app:layout_constraintTop_toTopOf="@id/categories_add_button"
                        app:layout_constraintBottom_toBottomOf="@id/categories_add_button"/>

                <com.vanniktech.emoji.EmojiTextView
                        android:id="@+id/categories_content_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toEndOf="@+id/categories_label_text_view"
                        app:layout_constraintBaseline_toBaselineOf="@id/categories_label_text_view"/>

                <Button
                        android:id="@+id/categories_add_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="+"
                        app:layout_constraintStart_toEndOf="@id/categories_content_text_view"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/description_text_input_layout"/>

                <FrameLayout
                        android:id="@+id/child_fragment_container"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/categories_add_button"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"/>

                <Button
                        android:id="@+id/images_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/add_images"
                        app:layout_constraintTop_toBottomOf="@+id/child_fragment_container"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/accept_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/ic_check_white_24dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>